--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Mike",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.3.13"
   },
