--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Mike",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
