--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
     "passport": "^0.4.0",
+    "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
